    libjurt-java and libunoil-java as Depends/Recommends for compatibility
    for now
  * debian/rules, debian/control.sdk.in: create new libreoffice-dev-gui
    package only alloving -core as dependency and move gengal and
    ui-previewer there (closes: #952347)
  * debian/*.ucf, debian/*.ucf.in: add files for dh_ucf
  * debian/libreoffice-common.dirs: create /etc/libreoffice/registry{,/res}

 -- Rene Engelhard <rene@debian.org>  Wed, 13 Nov 2019 22:19:06 +0100

libreoffice (1:6.4.3~rc1-3) UNRELEASED; urgency=medium

  * tests/patches/uicheck-standalone.diff: make apply again

  * merge from Ubuntu:
    - libreoffice-math: Add Breaks/Replaces libreoffice-common
    - debian/patches/poppler-0.86.diff: Fix build with poppler 0.86.0

 -- Rene Engelhard <rene@debian.org>  Sat, 28 Mar 2020 09:29:45 +0100

libreoffice (1:6.4.3~rc1-2) experimental; urgency=medium

  * debian/rules:
    - fix redland dependencies for libreoffice-core-nogui 

 -- Rene Engelhard <rene@debian.org>  Thu, 26 Mar 2020 17:34:54 +0100

libreoffice (1:6.4.3~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  [ Rene Engelhard ]
  * debian/patches/Fix-build-with-boost-lesser-than-1.68.diff: add from
    gerrit, thanks Rico Tschichholz

  * debian/rules:
    - don't delete lubuuilo.so in -core-nogui (closes: #954670)
    - don't ogltrans stuff in -impress, OGLTrans.so isn't built
    - use default boost (and thus system-mdds) again and revert
      BOOST_MINVER= (>= 1.68) change

  [ Jochen Sprickerhof ] 
  * debian/control.in:
    - Prefer libreoffice-core-nogui for -nogui variants
      Closes: #954319
    - Drop -core-nogui in non -nogui packages (if -nogui exists)
    - Fix report_builder and firebird nogui depends

 -- Rene Engelhard <rene@debian.org>  Thu, 26 Mar 2020 15:47:27 +0100

libreoffice (1:6.4.2-2) unstable; urgency=medium

  * debian/control.in:
    - make libreoffice-common Breaks: libreoffice-core (<< 1:6.4.2~rc1)
      (closes: #954323) 