@@ -304,6 +304,52 @@ Description: office productivity suite (metapackage)
   * libpaper-utils: papersize detection support via paperconf
   * bluez: Bluetooth support for Impress (slideshow remote control)
 
+Package: libreoffice-nogui
+Architecture: amd64 i386 arm64 armhf s390x ppc64 ppc64el
+Section: metapackages
+Depends: libreoffice-base-nogui [!hppa !mips64 !s390 !sparc],
+         libreoffice-calc-nogui,
+         libreoffice-core-nogui (= ${binary:Version}),
+         libreoffice-draw-nogui,
+         libreoffice-impress-nogui,
+         libreoffice-math-nogui,
+         libreoffice-report-builder-bin-nogui [!hppa !mips64 !s390 !sparc],
+         libreoffice-writer-nogui,
+         ${misc:Depends},
+         ${pyuno-depends}
+Recommends: libreoffice-script-provider-js,
+            libreoffice-script-provider-python,
+            libreoffice-sdbc-mysql,
+            libreoffice-sdbc-postgresql,
+            ${java-common-depends} libreoffice-script-provider-bsh
+Suggests: ghostscript,
+          gnupg,
+          gpa,
+          hunspell-dictionary,
+          hyphen-hyphenation-patterns,
+          imagemagick | graphicsmagick-imagemagick-compat,
+          libreoffice-grammarcheck,
+          myspell-dictionary,
+          mythes-thesaurus,
+          pstoedit,
+          unixodbc,
+          ${java-runtime-depends}
+Description: office productivity suite (metapackage, no GUI)
+ LibreOffice is a full-featured office productivity suite that provides
+ a near drop-in replacement for Microsoft(R) Office.
+ .
+ This metapackage installs all components of libreoffice:
+  * libreoffice-writer: Word processor
+  * libreoffice-calc: Spreadsheet
+  * libreoffice-impress: Presentation
+  * libreoffice-draw: Drawing
+  * libreoffice-base: Database
+  * libreoffice-math: Equation editor
+ .
+ WITHOUT GUI SUPPORT.
+ .
+ This package is intended mostly for scripting needs.
+
 Package: libreoffice-l10n-za
 Section: metapackages
 Architecture: all
