@@ -114,6 +114,53 @@ Description: office productivity suite (metapackage)
     media backend
   * libpaper-utils: papersize detection support via paperconf
 
+Package: libreoffice-nogui
+Architecture: %OOO_NOGUI_ARCHS%
+Section: metapackages
+Depends: libreoffice-base-nogui%OOO_NO_BASE_ARCHS%,
+         libreoffice-calc-nogui,
+         libreoffice-core-nogui (= ${binary:Version}),
+         libreoffice-draw-nogui,
+         libreoffice-impress-nogui,
+         libreoffice-math-nogui,
+         libreoffice-report-builder-bin-nogui%OOO_NO_REPORTBUILDER_ARCHS%,
+         libreoffice-writer-nogui,
+         ${misc:Depends},
+         ${pyuno-depends}
+Recommends: ${java-common-depends}
+            libreoffice-script-provider-bsh,
+            libreoffice-script-provider-js,
+            libreoffice-script-provider-python,
+            libreoffice-sdbc-mysql,
+            libreoffice-sdbc-postgresql
+Suggests: ghostscript,
+          hunspell-dictionary,
+          hyphen-hyphenation-patterns,
+          imagemagick | graphicsmagick-imagemagick-compat,
+          libreoffice-grammarcheck,
+          myspell-dictionary,
+          mythes-thesaurus,
+          pstoedit,
+          unixodbc,
+          gnupg,
+          gpa,
+          ${java-runtime-depends}
+Description: office productivity suite (metapackage, no GUI)
+ LibreOffice is a full-featured office productivity suite that provides
+ a near drop-in replacement for Microsoft(R) Office.
+ .
+ This metapackage installs all components of libreoffice:
+  * libreoffice-writer: Word processor
+  * libreoffice-calc: Spreadsheet
+  * libreoffice-impress: Presentation
+  * libreoffice-draw: Drawing
+  * libreoffice-base: Database
+  * libreoffice-math: Equation editor
+ .
+ WITHOUT GUI SUPPORT.
+ .
+ This package is intended mostly for scripting needs.
+
 Package: libreoffice-l10n-za
 Section: metapackages
 Architecture: all
