@@ -21,6 +21,7 @@ libreoffice (1:7.0.0~alpha1~git20200328-1) UNRELEASED; urgency=medium
     ui-previewer there (closes: #952347)
   * debian/*.ucf, debian/*.ucf.in: add files for dh_ucf
   * debian/libreoffice-common.dirs: create /etc/libreoffice/registry{,/res}
+  * debian/control.in: build libreoffice-nogui metapackage
 
  -- Rene Engelhard <rene@debian.org>  Wed, 13 Nov 2019 22:19:06 +0100
 
